Fixed not centered <hr>

--- a/Lab1.1/public/style.css
+++ b/Lab1.1/public/style.css
@@ -59,7 +59,6 @@ body {
 
 #curriculum
 {
-    width: 100%;
     margin: .5em;
     padding: .5em;
     clear: both;
